scripts/subtensor-local/envoy.yaml
static_resources:
  listeners:
  - name: listener_wss_9944
    address:
      socket_address: { address: 0.0.0.0, port_value: 9944 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: subtensor
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: subtensor_alice
                  timeout: 0s
          http_filters:
          - name: envoy.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/tls/tls.crt
              private_key:
                filename: /etc/tls/tls.key
  clusters:
  - name: subtensor_alice
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: subtensor_alice
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: alice
                port_value: 9945
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
